@@ -3,6 +3,8 @@ Revision history for Test-Harness
 3.12    ****-**-**
         - applied Steve Purkis' huge refactoring patch which adds
           configurable factories for most of the major internal classes.
+        - applied David Wheeler's patch to allow exec to be a code
+          reference.
 
 3.11    2008-06-09
         - applied Jim Keenan's patch that makes App::Prove::run return a
